fix text wrap and responsive issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,8 +12,6 @@ $border: #e1e8ed;
   visibility: hidden !important;
 }
 
-*{word-wrap:break-word;}
-
 body[data-action="devise/sessions-new"], body[data-action="devise/sessions-create"] {
   background: image-url('red.jpg') no-repeat center center fixed;
   background-size: cover;
